# openrpgeditor

./: .clang-format  .clang-format-ignore  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  DISCLAIMER  LICENSE  as.predefined  vcpkg.json
src/core/: CMakeLists.txt
src/core/Core/: Application.cpp  Application.hpp  CharacterSheet.cpp  CharacterSheet.hpp  CheckboardTexture.cpp  CheckboardTexture.hpp  DPIHandler.hpp  DatabaseEditor.cpp  DatabaseEditor.hpp  EventEditor.cpp  EventEditor.hpp  EventListView.cpp  EventListView.hpp  ImGuiParsedText.cpp  ImGuiUtils.cpp  ImGuiUtils.hpp  MapEditor.cpp  MapEditor.hpp  MapRenderer.cpp  MapRenderer.hpp  Project.cpp  Project.hpp  ResourceManager.cpp  ResourceManager.hpp  Settings.cpp  Settings.hpp  TextParser.cpp  TextParser.hpp  Texture.cpp  Texture.hpp  TilesetPicker.hpp  UndoStack.cpp  UndoStack.hpp  Utils.hpp  Window.cpp  Window.hpp
src/core/Core/CommonUI/: EventCommandEditor.cpp  EventCommandEditor.hpp  ObjectPicker.inl  TextEditor.hpp  TraitsEditor.cpp  TraitsEditor.hpp  VariableSwitchPicker.cpp  VariableSwitchPicker.hpp
src/core/Core/DatabaseEditor/: DBActorsTab.cpp  DBActorsTab.hpp  DBAnimationsTab.cpp  DBAnimationsTab.hpp  DBArmorsTab.hpp  DBClassesTab.cpp  DBClassesTab.hpp  DBCommonEventsTab.cpp  DBCommonEventsTab.hpp  DBEnemiesTab.hpp  DBItemsTab.hpp  DBSkillsTab.hpp  DBStatesTab.cpp  DBStatesTab.hpp  DBSystemTab.cpp  DBSystemTab.hpp  DBTilesetsTab.hpp  DBTroopsTab.hpp  DBWeaponsTab.cpp  DBWeaponsTab.hpp  IDBEditorTab.hpp
src/core/Core/EventCommands/: Dialog_CommonEvent.cpp  Dialog_CommonEvent.hpp  Dialog_ControlSwitches.cpp  Dialog_ControlSwitches.hpp  Dialog_ControlVariables.cpp  Dialog_ControlVariables.hpp  Dialog_GameData.cpp  Dialog_GameData.hpp  IDialogController.hpp
src/core/Core/EventEditor/: EVPage.cpp  EVPage.hpp
src/core/Core/MapEditor/: MapCursor.cpp  MapCursor.hpp  MapEvent.cpp  MapEvent.hpp  MapProperties.cpp  MapRenderer.cpp  MapRenderer.hpp  ref.txt
src/core/Platform/Linux/: DPIHandler.cpp  Resources.cpp
src/librpgm/: CMakeLists.txt  image_loader.c
src/librpgm/Database/: Actor.cpp  Actor.hpp  Actors.cpp  Actors.hpp  Animation.cpp  Animation.hpp  Animations.cpp  Animations.hpp  Armor.cpp  Armor.hpp  Armors.cpp  Armors.hpp  Audio.cpp  Audio.hpp  Battler.cpp  Battler.hpp  Class.cpp  Class.hpp  Classes.cpp  Classes.hpp  ColorFormatter.cpp  ColorFormatter.hpp  CommandParser.cpp  CommandParser.hpp  CommonEvent.cpp  CommonEvent.hpp  CommonEvents.cpp  CommonEvents.hpp  Damage.cpp  Damage.hpp  Database.cpp  Database.hpp  DatabaseEditor.cpp  DatabaseEditor.hpp  Doc.cpp  Doc.hpp  Docs.cpp  Docs.hpp  Effect.cpp  Effect.hpp  (+90 more)
src/librpgm/Database/EventCommands/: AbortBattle.cpp  AbortBattle.hpp  BattleProcessing.cpp  BattleProcessing.hpp  BreakLoop.cpp  BreakLoop.hpp  ChangeActorImage.cpp  ChangeActorImage.hpp  ChangeArmors.cpp  ChangeArmors.hpp  ChangeBattleBGM.cpp  ChangeBattleBGM.hpp  ChangeBattleback.cpp  ChangeBattleback.hpp  ChangeClass.cpp  ChangeClass.hpp  ChangeDefeatME.cpp  ChangeDefeatME.hpp  ChangeEXP.cpp  ChangeEXP.hpp  ChangeEncounterDisable.cpp  ChangeEncounterDisable.hpp  ChangeEnemyHP.cpp  ChangeEnemyHP.hpp  ChangeEnemyMP.cpp  ChangeEnemyMP.hpp  ChangeEnemyState.cpp  ChangeEnemyState.hpp  ChangeEnemyTP.cpp  ChangeEnemyTP.hpp  ChangeEquipment.cpp  ChangeEquipment.hpp  ChangeFormationAccess.cpp  ChangeFormationAccess.hpp  ChangeGold.cpp  ChangeGold.hpp  ChangeHP.cpp  ChangeHP.hpp  ChangeItems.cpp  ChangeItems.hpp  (+181 more)
src/librpgm/Database/Serializable/: ActorsSerializer.cpp  ActorsSerializer.hpp  AnimationsSerializer.cpp  AnimationsSerializer.hpp  ArmorsSerializer.cpp  ArmorsSerializer.hpp  ClassesSerializer.cpp  ClassesSerializer.hpp  CommonEventsSerializer.cpp  CommonEventsSerializer.hpp  DeserializationQueue.cpp  DeserializationQueue.hpp  EnemiesSerializer.cpp  EnemiesSerializer.hpp  FileQueue.cpp  FileQueue.hpp  ISerializable.hpp  ItemsSerializer.cpp  ItemsSerializer.hpp  MapInfosSerializer.cpp  MapInfosSerializer.hpp  MapSerializer.cpp  MapSerializer.hpp  SerializationQueue.cpp  SerializationQueue.hpp  SkillsSerializer.cpp  SkillsSerializer.hpp  StatesSerializer.cpp  StatesSerializer.hpp  SystemSerializer.cpp  SystemSerializer.hpp  Task.hpp  (+8 more)
src/librpgm/Runtime/: Project.cpp  Project.hpp
src/librpgm/Utils/: JavaMath.cpp  JavaMath.hpp  SignalSlot.hpp  Typename.hpp
src/openrpgeditor/: CMakeLists.txt  IconsFontAwesome6.h
src/openrpgeditor/App/: Main.cpp  ProjectInfo.cpp.in  ProjectInfo.hpp
src/openrpgeditor/Core/: AboutDialog.cpp  AboutDialog.hpp  Application.cpp  Application.hpp  ApplicationTheme.cpp  ApplicationTheme.hpp  ApplicationThemeManager.cpp  CharacterSheet.cpp  CharacterSheet.hpp  CheckerboardTexture.cpp  CheckerboardTexture.hpp  DPIHandler.hpp  DatabaseEditor.cpp  DatabaseEditor.hpp  DirectoryMonitor.cpp  DirectoryMonitor.hpp  DownloadManager.cpp  DownloadManager.hpp  EventEditor.cpp  EventEditor.hpp  EventListView.cpp  EventListView.hpp  EventSearcher.cpp  EventSearcher.hpp  FaceSheet.cpp  FaceSheet.hpp  FirstBootWizard.cpp  IUndoCommand.hpp  ImGuiParsedText.cpp  ImGuiParsedText.hpp  ImGuiUtils.cpp  ImGuiUtils.hpp  Image.cpp  Image.hpp  Interpreter.cpp  Interpreter.hpp  LibLCF.cpp  LibLCF.hpp  Log.hpp  MainWindow.cpp  (+36 more)
src/openrpgeditor/Editor/: AboutDialog.cpp  AboutDialog.hpp  Application.cpp  Application.hpp  ApplicationTheme.cpp  ApplicationTheme.hpp  DatabaseEditor.cpp  DatabaseEditor.hpp  DirectoryMonitor.cpp  EventEditor.cpp  EventEditor.hpp  EventListView.cpp  EventListView.hpp  EventSearcher.cpp  EventSearcher.hpp  FirstBootWizard.cpp  FirstBootWizard.hpp  Interpreter.cpp  Interpreter.hpp  JSONInspector.cpp  JSONInspector.hpp  LibLCF.cpp  LibLCF.hpp  Log.cpp  Main.cpp  MainWindow.cpp  MainWindow.hpp  MapEditor.cpp  MapEditor.hpp  MapListView.cpp  MapListView.hpp  Process.cpp  Process.hpp  ProjectInfo.cpp.in  ReferenceSearch.cpp  ReferenceSearch.hpp  ResourceManager.cpp  ResourceManager.hpp  Resources.hpp  Settings.cpp  (+11 more)
src/openrpgeditor/Math/: CMakeLists.txt
src/openrpgeditor/Tests/: CMakeLists.txt
src/openrpgeditor/cmake/: AppAssets.cmake  Packaging.cmake
(+1052 files in other folders)
